# blksc3

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  blksc3-wasm.html  blksc3-websocket.html  blksc3-ws.html  blksc3.cabal  blksc3.html  cabal.project  index.html
.github/workflows/: ci.yml
cmd/: Makefile  blksc3.cabal  blksc3.hs
css/: BlkSc3.css  Makefile  blksc3.css
help/: Makefile
help/Figure/: Arity.json  Assignment.json  BlockColours.json  BlockOutput.json  CollapsedBlocks.json  ControlField.json  ExternalInputs.json  InternalInputs.json  LetBinding.json  LexicalScope.json  MenuField.json  Nil.json  Number.json  (+11 more)
hs/: README  gen.hs  translate.hs  translator.hs
html/: Makefile  graph-menu.html  guide-menu.html  help-menu.html  program-menu.html  ui-ctl.html
js/: CodeGenerator.js  Makefile  README.md  UgenCodeGenerator.js  blksc3-common.js  blksc3-controllers.js  blksc3-core.js  blksc3-gen-common.js  blksc3-gen-ugen.js  blksc3-gen.js  blksc3-graph.js  blksc3-lang.js  blksc3-layout.js  blksc3-svg.js  blksc3-wasm.js  blksc3-websocket.js  blksc3-workspace-json.js  blksc3.js  controllers.js  convertXmlToJson.js  core.js  fullscreen.js  gen-ugen.js  gen.js  graph-menu.js  graph.js  json.js  layout.js  notes.js  scrollbars.js  svg.js  websocket.js  workspace-json.js  xml.js
json/: BlockDefinitions.json  ColourSchema.json  ColourScheme.json  CompleteToolbox.json  GuideMenu.json  HelpMenu.json  Layouts.json  Makefile  ProgramOracle.json  ProgramsMenu.json  README  SmallProgramsMenu.json  SmallToolbox.json  SymbolicMessages.json  TextMessages.json  UgenBlockDefinitions.json  blksc3-compact.json  blksc3-layouts.json  blksc3-std.json  blksc3-ugen.json  blksc3.json  guide-menu.json  help-menu.json  indent.sh  messages-symbolic.json  messages-textual.json  program-menu.json  small-programs-menu.json  toolbox.json
lib/: Makefile
md/: Makefile  blksc3.md  essay.md  extended-abstract.md  faq.md  glossary.md  notes.md  references.md  setup.md  talk.md  video.md
svg/: README
xml/: README  blksc3.xml  toolbox.xml
(+3129 files in other folders)
