Cabal-Version:      2.4
Name:               blksc3
Version:            0.21
Synopsis:           Block SuperCollider
Description:        Block SuperCollider
License:            GPL-3.0-only
Category:           Sound
Copyright:          (c) Rohan Drape, 2021-2022
Author:             Rohan Drape
Maintainer:         rd@rohandrape.net
Stability:          Experimental
Homepage:           http://rohandrape.net/t/blksc3
Tested-With:        GHC == 9.4.3
Build-Type:         Simple

executable blksc3
  build-depends:    base >= 4.8 && < 5,
                    bytestring,
                    hmt-base == 0.21.*,
                    hosc == 0.21.*,
                    hsc3-db == 0.21.*,
                    stsc3 == 0.21.*,
                    websockets
  main-is:          blksc3.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-orphans -fwarn-tabs

Source-Repository   head
  Type:             git
  Location:         https://gitlab.com/rd--/blksc3/
